--- a/colors-app/src/ColorBox.css
+++ b/colors-app/src/ColorBox.css
@@ -1,4 +1,4 @@
-.ColorBox {
+/* .ColorBox {
     width: 20%;
     height: 25%;
     margin: 0 auto;
@@ -10,9 +10,9 @@
 
 .SingleColorPalette .ColorBox {
     height: 50%;
-}
+} */
 
-.copy-button, .back-button {
+/* .back-button {
     width: 100px;
     height: 30px;
     position: absolute;
@@ -30,18 +30,18 @@
     text-transform: uppercase;
     border: none;
     text-decoration: none;
-}
+} */
 
-.copy-button {
+/* .copy-button {
     opacity: 0;
 }
 
 .ColorBox:hover .copy-button {
     opacity: 1;
     transition: 0.3s;
-}
+} */
 
-.box-content {
+/* .box-content {
     position: absolute;
     padding: 10px;
     width: 100%;
@@ -51,9 +51,9 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     font-size: 12px;
-}
+} */
 
-.light-text {
+/* .light-text {
     color: white;
 }
 
@@ -73,9 +73,9 @@
     text-align: center;
     line-height: 30px;
     text-transform: uppercase;
-}
+} */
 
-.copy-overlay {
+/* .copy-overlay {
     opacity: 0;
     z-index: 0;
     width: 100%;
@@ -89,9 +89,9 @@
     z-index: 10;
     position: absolute;
     transition: transform 0.6s ease-in-out;
-}
+} */
 
-.copy-msg {
+/* .copy-msg {
     position: fixed;
     left: 0;
     top: 0;
@@ -113,9 +113,9 @@
     z-index: 25;
     transition: all 0.4s ease-in-out;
     transition-delay: 0.3s;
-}
+} */
 
-.copy-msg h1 {
+/* .copy-msg h1 {
     font-weight: 400;
     text-shadow: 1px 2px black;
     background-color: rgba(255, 255, 255, 0.2);
@@ -129,8 +129,8 @@
 .copy-msg p {
     font-size: 2rem;
     font-weight: 100;
-}
+} */
 
-.ColorBox.go-back {
+/* .ColorBox.go-back {
     background-color: black;
-}
+} */
